# zephyr-siot

./: .gitignore  CHANGELOG-zonit.md  CHANGELOG.md  CLAUDE.md  CMakeLists.txt  Kconfig  README-Zonit.md  README.md  const.code-search  envsetup-zonit.sh  envsetup.sh  package-lock.json  package.json  west-nrf.yml  west.yml
.gitea/: pull_request_template.md
apps/common/: ber.c  html.c  html.h  snmp.c  snmp.h  snmp_message.c  snmp_message.h
apps/z-mr/: CMakeLists.txt  README.md  implementation.md  prj.conf  sample.yaml  z-mr_gpio-mapping.ods
apps/z-mr/boards/: esp32_ethernet_kit_procpu.conf  esp32_poe_procpu.conf  esp32_poe_procpu.overlay  esp32_poe_wrover_procpu.overlay
apps/z-mr/frontend/: README.md  elm-land.json  elmfails.txt  index.html
apps/z-mr/frontend/review/src/: ReviewConfig.elm
apps/z-mr/frontend/src/: Ports.elm  Shared.elm
apps/z-mr/frontend/src/Api/: Point.elm  ZPoint.elm
apps/z-mr/frontend/src/Pages/: Events.elm  Home_.elm  Live.elm  Settings.elm
apps/z-mr/frontend/src/Shared/: Model.elm  Msg.elm
apps/z-mr/frontend/src/UI/: Container.elm  Device.elm  Form.elm  Nav.elm  Page.elm  Style.elm
apps/z-mr/snmp/: EATON-ATS2-MIB  EATON-ATS2-MIB.c  EATON-ATS2-MIB.h  EATON-ATS2-MIB.json  snmp_example.c  snmp_test.sh  z-mr.mib  z-mr.mib.c  z-mr.mib.h
apps/z-mr/src/: ats.c  ats.h  ble.c  ble.h  config.c  config.h  dc.c  eeprom.c  fan.c  fan.h  index.html  led.c  main.c  network.c  point.c  point.h  snmp.c  w1.c  wd.c  web.c  zpoint.h
apps/z-mr/test/: telegraf.conf
boards/: native_sim.conf
include/: html.h  nvs.h  point.h  siot-string.h
lib/: CMakeLists.txt  Kconfig  README.md  ble.c  html.c  metrics.c  nvs.c  point.c  siot-string.c  zbus.c
tests/: CMakeLists.txt  point.c  prj.conf  siot-string.c  test.c  testcase.yaml
(+105 files in other folders)
